# yfinance-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  cache.py  cliff.toml  history.py  oscillator.py  pyproject.toml  server.py  test_cache.py  test_history.py  test_oscillator.py  test_trend.py  test_volume.py  trend.py  volume.py
.github/workflows/: docker.yml  release.yml  test.yml
.hypothesis/constants/: 050ffda2b0226120  103cddd6e2c78a1a  1174b02962a4a27f  5115f93903972d22  567c00c4a798048e  5c421b4b0e2f5b9e  a712ac6bbe18e07f  ef4c699842ccd960
benchmarks/: README.md  conftest.py  fetch_fixture_data.py  generate_fixtures.py  test_bench_price.py
benchmarks/fixtures/: 0700.HK_1d.json  0700.HK_1mo.json  0700.HK_1wk.json  1234.T_1d.json  1234.T_1mo.json  1234.T_1wk.json  7203.T_1d.json  7203.T_1mo.json  7203.T_1wk.json  9999.HK_1d.json  9999.HK_1mo.json  9999.HK_1wk.json  AAPL_1d.json  AAPL_1mo.json  AAPL_1wk.json  BENCH.DE_1d.json  BENCH.DE_1mo.json  BENCH.DE_1wk.json  DEMO.TO_1d.json  DEMO.TO_1mo.json  DEMO.TO_1wk.json  FAKE.L_1d.json  FAKE.L_1mo.json  FAKE.L_1wk.json  GOOGL_1d.json  GOOGL_1mo.json  GOOGL_1wk.json  HSBA.L_1d.json  HSBA.L_1mo.json  HSBA.L_1wk.json  MC.PA_1d.json  MC.PA_1mo.json  MC.PA_1wk.json  MOCK.PA_1d.json  MOCK.PA_1mo.json  MOCK.PA_1wk.json  MSFT_1d.json  MSFT_1mo.json  MSFT_1wk.json  RY.TO_1d.json  (+9 more)
dev/bench/: data.js
src/yahoo_finance_mcp/: __init__.py  cache.py  cache_duckdb.py  errors.py  indicators.py  prices.py  server.py
src/yfinance_mcp/: __init__.py  cache.py  cache_duckdb.py  errors.py  helpers.py  history.py  indicators.py  prices.py  server.py
tests/: __init__.py  conftest.py  test_cache.py  test_helpers.py  test_indicators.py  test_interval_selection.py  test_logging_config.py  test_server.py  test_technicals_downsample.py  test_toon_tz.py
tests/crosscheck/: __init__.py  test_indicators_crosscheck.py
v1/: CLAUDE.md  DESIGN.md  cache.py  history.py  oscillator.py  pyproject.toml  server.py  test_cache.py
