[project]
name = "yfinance-mcp"
version = "1.0.0"
description = "Yahoo Finance MCP server"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.26.0",
    "yfinance>=1.2.0",
    "pandas>=3.0.0",
    "duckdb>=1.4.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
